--- a/index.html
+++ b/index.html
@@ -4,12 +4,28 @@
 <head>
   <meta charset="utf-8">
   <title>Final</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles/main.css" />
 </head>
 
 <body>
-<input class="fileInput" type="file" name="pic" size="40" accept="image/*"/>
-
-
+  <div class="container">
+    <div class="jumbotron">
+      <div>
+        <h1>
+          <i class="glyphicon glyphicon-camera" aria-hidden="true">
+          </i>
+        </h1>
+      </div>
+     <div class = "pic-select">
+       <p>Select Photo</p>
+       <div id="dropzone" class= "center-all">
+         <input class="fileInput" type="file" name="pic" size="40"
+         accept="image/*"/>
+       </div>
+     </div>
+    </div>
+  </div>
   <script type="text/javascript" src="./js/index.js">
   </script>
 </body>
