drag drop feature implemented, styles updated

--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
 </head>
 <body>
   <div class="container">
-    <div class="jumbotron">
+    <div class="jumbotron" id="zone">
         <h1>
           <i class="glyphicon glyphicon-camera" aria-hidden="true">
           </i>
           <p>Select Photo</p>
         </h1>
-       <div id="dropzone" class= "js-dropzone fileInput">
-         <input class="fileInput" type="file" name="file[]" size="40"
-         accept="image/*" multiple=""/>
+       <div id="dropzone" class= "js-dropzone">
          <label for="fileInput"><strong>Choose a file</strong><span class="fileInput"> or drag it here</span>.</label>
        </div>
    </div>
