change made to post call for of loop added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
           <p>Select Photo</p>
         </h1>
        <div id="dropzone" class= "js-dropzone">
-         <label for="fileInput"><strong>Choose a file</strong><span class="fileInput"> or drag it here</span>.</label>
+         <!-- <input type="file" name="files[]" id="file" class="box__file" data-multiple-caption="{count} files selected" multiple=""> -->
+         <label for="file"><strong>Choose a file</strong><span class="box__dragndrop"> or drag it here</span>.</label>
        </div>
    </div>
   </div>
