image now opens when dropped in dropzome

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
        <div id="dropzone" class= "js-dropzone">
          <!-- <input type="file" name="files[]" id="file" class="box__file" data-multiple-caption="{count} files selected" multiple=""> -->
          <label for="file"><strong>Choose a file</strong><span class="box__dragndrop"> or drag it here</span>.</label>
+         <output>
+
+             <div class="row">
+               <div class="col-md-6 col-md-offset-3 js-container"></div>
+             </div>
+
+         </output>
        </div>
    </div>
   </div>
