--- a/index.html
+++ b/index.html
@@ -9,19 +9,22 @@
 <body>
   <div class="container">
     <div class="jumbotron" id="zone">
-        <h1>
-          <i class="glyphicon glyphicon-camera" aria-hidden="true">
-          </i>
-          <p>Select Photo</p>
-        </h1>
+        <div class = "select">
+          <label for="fileupload">
+            <i class="glyphicon glyphicon-camera" aria-hidden="true">
+            </i>
+            <small>Select Photo</small>
+          </label>
+          <input type="file" id="fileupload" />
+        </div>
        <div id="dropzone" class= "js-dropzone">
          <!-- <input type="file" name="files[]" id="file" class="box__file" data-multiple-caption="{count} files selected" multiple=""> -->
-         <label for="file"><strong>Choose a file</strong><span class="box__dragndrop"> or drag it here</span>.</label>
+         <strong>Choose a file</strong><span> or drag it here.</span>
          <output>
 
              <div class="row">
                <div class="col-md-6 col-md-offset-3 js-container"></div>
-               
+
              </div>
 
          </output>
