--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
        </div>
    </div>
   </div>
-  <script type="text/javascript" src="./js/index.js">
+  <script type="text/javascript" src="./js/dist/bundle.js">
   </script>
 </body>
 </html>
