--- a/index.html
+++ b/index.html
@@ -20,12 +20,9 @@
        <div id="dropzone" class= "js-dropzone">
          <strong>Choose a file</strong><span> or drag it here.</span>
          <output>
-
-             <div class="row">
-               <div class="col-md-6 col-md-offset-3 js-container"></div>
+             <div class="js-container">
 
              </div>
-
          </output>
        </div>
    </div>
