--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="styles/main.css" />
 </head>
 <body>
+  <div class="js-image-container fullpage"></div>
+  </div>
   <div class="container">
     <div class="jumbotron" id="zone">
         <div class = "select">
