--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="styles/main.css" />
 </head>
 <body>
-  <div class="js-image-container fullpage"></div>
+  <div class="js-image-container fullpage">
+    <input id="js-search" type="text" class="form-control" placeholder="Search for..."/>
+</div>
   <div class="container">
     <div class="jumbotron" id="zone">
         <div class = "select">
