--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
   <div class="js-image-container fullpage">
-    <input id="js-search" type="text" class="form-control" placeholder="Search for..."/>
+
+    <input id="js-search" type="text" class="form-control" placeholder="Word Search..."/>
+  
 </div>
   <div class="container">
     <div class="jumbotron" id="zone">
